[package]
name = "momo"
version = "0.1.0"
edition = "2024"

[dependencies]
flume = "0.12.0"
memmap2 = "0.9.10"
ouroboros = "0.18.5"
fs4 = "1.1.0"
parking_lot = "0.12.5"
anyhow = "1.0.102"
rand = "0.10.1"

# for parallelism
jwalk = "0.8.1"
sonic-rs = "0.5.8"
rayon = "1.12.0"

# parser
oxc_allocator = "0.133.0"
oxc_parser = "0.133.0"
oxc_span = "0.133.0"
oxc_ast = "0.133.0"
oxc_diagnostics = "0.133.0"

# cli
clap = {version="4.6.1", features = ["derive", "string"] }
owo-colors = "4.3.0"

# manager
reflink-copy = "0.1.29"
blake3 = "1.8.5"
fd-lock = "4.0.4"
tempfile = "3.27.0"

# benching
dhat = "0.3.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # set to false for debug informations
debug = false # set to true for debug information
panic = "abort" # let it crash and force ourselves to write safe rust


[profile.coverage]
inherits = "release"
opt-level = 2 # compile faster
codegen-units = 256 # compile faster
lto = "thin" # Faster compile time with thin LTO
debug-assertions = true # make sure debug_assert! pass
overflow-checks = true # catch arithmetic overflow errors

[profile.dev-no-debug-assertions]
inherits = "dev"
debug-assertions = false

[features]
dhat-heap = []